src/test/deca/context/valid/assign-boolean-boolean.deca
// Description : 
//	 test assign boolean <-- boolean
// Resultats :
//	
//
// Historique:
//    cree le 08/01/2022
{
	boolean b = true;
}