src/test/deca/context/invalid/init-void-boolean.deca
// Description : 
//	 test d'initialisation void <-- boolean
// Resultats :
//	 6:1: we can't declare an identifier with type void
{
	void n = true;
}